--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<div class="about-text">
 		<p>About Me</p>
 		<p>Art Student</p>
-		<p>Hello visitors!My name is Sakshi Jetley from Mumbai.Though I am an Engineering Student currently,drawing has always been my passion since chilhood.My interest in Art has been far more than pursuing a degree, but I have deep knowledge of the science in Art.
+		<p>Hello visitors! I am Sakshi Jetley from Mumbai.Though I am an Engineering Student currently,drawing has always been my passion since chilhood.My interest in Art has been far more than pursuing a degree, but I have deep knowledge of the science in Art.
             It's not about Training only our Hands, but Our Eyes!</p>
             
         <p>I Enjoy Teaching as well. I'm passionate to share my knowledge to all upcoming artist who really Passionate about Photo realism. That's why I Started with Pencil Perception Academy. I conduct workshops, Online Courses to share the joy of this really beautiful genre of Art.</p>
